[tool.poetry]
name = "chatgpt-com-chainlit"
version = "0.1.0"
description = ""
authors = ["paribe <paribe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
chainlit = "^2.1.2"
streamlit = "^1.42.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
